5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_1331.log
== TEST (2019-03-26 18:24:22) 
-- CODE:
50//3
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:24:58) 
-- CODE:
x=50//3
print(round(x, 2))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:25:56) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:26:09) 
-- CODE:
x=50//3
9 % 4
print(round(x, 2))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:26:49) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
print(9 % 1)
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:27:05) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
print(16 % 1)
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:27:16) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
print(16 % 3)
-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:27:19) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
print(16 % 3)
-- EXECUTION TIME:
0.134126
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:27:21) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
print(16 % 3)
-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:28:12) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
print(round(16 % 3))
-- OUTPUT:
16
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:28:15) 
-- CODE:
x=50//3
9 % 1
print(round(x, 2))
print(round(16 % 3))
-- EXECUTION TIME:
0.150838
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:28:47) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(16 % 4))
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:28:49) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(16 % 4))
-- EXECUTION TIME:
0.249718
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:28:50) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(16 % 4))
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:29:06) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(16 % 1))
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:30:40) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(16 % 1))
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:30:43) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(16 % 1))
-- EXECUTION TIME:
0.126307
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:30:44) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(16 % 1))
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:31:00) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(14 % 1))
-- OUTPUT:
16
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:31:07) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(14 % 4))
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:31:08) 
-- CODE:
x=50//3
9 % 1
print(round(x, 3))
print(round(14 % 4))
-- EXECUTION TIME:
0.184533
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
